Adding others cfg

--- a/kakakouri.cfg
+++ b/kakakouri.cfg
@@ -1,6 +1,5 @@
 cfgver "1"
 unbindall
-bind "0" "slot10"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot3"
@@ -8,7 +7,6 @@ bind "4" "slot4"
 bind "5" "slot5"
 bind "6" "slot6"
 bind "7" "slot7"
-bind "8" "slot8"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "buymenu"
@@ -47,6 +45,8 @@ bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "player_ping"
+bind "MOUSE4" "slot10"
+bind "MOUSE5" "slot8"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "invnext"
 @panorama_debug_overlay_opacity "0.8"
